examples/test/testpolicy10770.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10770
  namespace: namespace79
spec:
  podSelector:
    matchLabels:
      key25: value31
      key18: value25
      key11: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value9
          key35: value23
          key32: value43
      podSelector:
        matchLabels:
          key21: value37
